--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -202,3 +202,11 @@ pre {
         }
     }
 }
+
+/*-----------------------------------------------------------------------------
+ *                                     COLOR 
+ *----------------------------------------------------------------------------*/
+$color-base: #e74c3c;
+$color-mono: #444444;
+$color-white: #FFFFFF;
+$mono-offset: 10%;
