--- a/_sass/_theme-utility.scss
+++ b/_sass/_theme-utility.scss
@@ -2,7 +2,7 @@
  *                                      UTILITIES 
  *----------------------------------------------------------------------------*/
 .box-shadow {
-	box-shadow: 0px 2px 10px rgb(183, 183, 183);
+	box-shadow: 0px 2px 3px rgb(183, 183, 183);
 	padding: 30px;
 	background-color: $color-light;
 }
@@ -10,20 +10,20 @@
 
 .scrollbar::-webkit-scrollbar-track
 {
-	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
-	border-radius: 5px;
+	-webkit-box-shadow: inset 0 0 1px rgba(0,0,0,0.3);
+	border-radius: 1px;
 	background-color: $color-light;
 }
 
 .scrollbar::-webkit-scrollbar
 {
-	width: 6px;
+	width: 1px;
 	background-color: $color-light;
 }
 
 .scrollbar::-webkit-scrollbar-thumb
 {
-	border-radius: 5px;
-	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.3);
-	background-color: $color-dark-lighter;
+	border-radius: 1px;
+	-webkit-box-shadow: inset 0 0 1px rgba(0,0,0,.3);
+	background-color: #e5e5e5;
 }
